06-11-26 Rene Fritz  <r.fritz@colorcube.de>

	* Fix: 3864#: After replacing an existing file in DAM re-indexing fails.


06-11-24 Rene Fritz  <r.fritz@colorcube.de>

	* Fix: added check to tx_dam_tce_process if a file exists that should be deleted
	* Fix: #4263: DAM Media Browser doesn't select any file, if disallowed_types are defined in TCA
	* Fix: #4231: resultsPerPage does not work correctly
	* Fix: #4232: The umlaute of selected categories are shown in uft-chars with BE in utf8

06-09-13 Rene Fritz  <r.fritz@colorcube.de>

	* change: field file_path is changed to varchar(255) and defined as index (including file_name and other) which will speed up things!!

06-09-07 Rene Fritz  <r.fritz@colorcube.de>

	* Fix: element browser works now mit allowed_types = '*, -php'

06-09-01 Rene Fritz  <r.fritz@colorcube.de>

	* Fix: tx_dam_batchprocess. Old stored data was used in batch processing when field was set empty
	* Fix: tx_dam_list_list. Deleted translated records will not be displayed
	* Fix #3636: tx_dam_tce_process. test intval($id) in processDatamap_postProcessFieldArray to work not with id='NEW'
	* Fix #3438: tx_dam_db. Deleted records are displayed in "usage" tab of dam records
	* Fix #3500: tx_dam_db. tx_dam_db::getReferencedFiles doesn't respect $whereClause
	* Fix #3778: missing $this in function process() in file upload_status.php
	* Fix #3453:  increased TCA file_path max value to 255
	* Fix #3371, 3371: added missing backpath in class.tx_dam_browse_media.php, class.tx_dam_selectionFolder.php, ...
	* Fix #3940:  category not assignable if title contains ' character -  added t3lib_div::slashJS() in tx_dam_tcefunc and tx_dam_selprocbase
	* Change: added configuration to TCA to make MM-Ref table work with coming version of mmforeign

06-08-31 Rene Fritz  <r.fritz@colorcube.de>

	* Fix: tx_dam_indexing. use PATH_site as default path for searching indexing setup
	* Fix: tx_dam_indexing. reindexing use right values for MM fields now